2010-05-01  Robert Hogan  <robert@webkit.org>

        Reviewed by Simon Hausmann.

        [Qt] Add smart paste support

        https://bugs.webkit.org/show_bug.cgi?id=38136

        * WebCore.pro:
        * editing/qt/SmartReplaceQt.cpp: Added.
        (WebCore::isCharacterSmartReplaceExempt):
        * platform/qt/PasteboardQt.cpp:
        (WebCore::Pasteboard::writeSelection):
        (WebCore::Pasteboard::canSmartReplace):

2010-04-30  Yoshiki Hayashi  <yhayashi@google.com>

        Reviewed by Shinichiro Hamaji.

        https://bugs.webkit.org/show_bug.cgi?id=38249
        
        Fixes an issue where border height and padding height are ignored when computing vertically shrinking flexbox's height.

        Test: fast/flexbox/child-flexing.html

        * rendering/RenderFlexibleBox.cpp:
        (WebCore::RenderFlexibleBox::allowedChildFlex):

2010-04-30  Shinichiro Hamaji  <hamaji@chromium.org>

        Reviewed by Darin Adler.

        Add layoutTestController.setPrinting()
        https://bugs.webkit.org/show_bug.cgi?id=37203

        Use the renderer's width insteead of screen's width as the width of
        a screen depends on machines.

        * rendering/RenderTreeAsText.cpp:
        (WebCore::externalRepresentation):

2010-04-30  Joseph Pecoraro  <joepeck@webkit.org>

        Reviewed by Timothy Hatcher.

        Web Inspector: Missing INSPECTOR Guard in Console::lastWMLErrorMessage
        https://bugs.webkit.org/show_bug.cgi?id=38366

        Console::lastWMLErrorMessage is only available if WML is enabled, however
        its implementation only makes sense as long as INSPECTOR is enabled
        as well. So this adds the ENABLE(INSPECTOR) guard in the function. A
        browser without ENABLE(INSPECTOR) will always get an empty result.

        * page/Console.cpp:

2010-04-28  Joseph Pecoraro  <joepeck@webkit.org>

        Reviewed by Oliver Hunt.
