@@ -1,3 +1,15 @@
+2010-05-01  Xan Lopez  <xlopez@igalia.com>
+
+        Reviewed by Oliver Hunt.
+
+        [GTK] GObject DOM bindings
+        https://bugs.webkit.org/show_bug.cgi?id=33590
+
+        Unify more logic to skip functions into SkipFunction, and
+        whitelist the two [Custom] methods in HTMLCollection.idl.
+
+        * bindings/scripts/CodeGeneratorGObject.pm:
+
 2010-05-01  Robert Hogan  <robert@webkit.org>
 
         Reviewed by Simon Hausmann.
